--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
 /*testi*/
 #testoTitolo {
 	text-align: center;
-	font-family: "Lobster";
+	font-family: "Arial";
 	font-size: 3em;
+	font-weight: bold;
 	border: 1px solid blue;
 }
